# batch_apk_installer

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yaml
src/: adb.rs  android.rs  config.rs  console.rs  device.rs  error.rs  installation.rs  lib.rs  main.rs  package.rs
